# XIntent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: API.md  API.zh-CN.md  TECHNICAL_PRINCIPLES.md  TECHNICAL_PRINCIPLES.zh-CN.md
src/intent_recognition/: __init__.py  config.py  intent_registry.py  intent_reuse_strategy.py  models.py  multi_recognizer_arbiter.py  pipeline.py  training_data_exporter.py
src/intent_recognition/code_layer/: __init__.py  classifier.py  keyword_matcher.py  page_guidance.py  rule_engine.py  vector_matcher.py
src/intent_recognition/deep_llm/: __init__.py  classifier.py  prompts.py
src/intent_recognition/evaluation/: __init__.py  metrics.py  runner.py  test_set.py
src/intent_recognition/slot_filling/: __init__.py  (+3 more)
src/user_input_normalization/: __init__.py  config.py  models.py  pipeline.py  server.py
tests/: test_attribute_resolution.py  test_candidate_retriever.py  test_clarification.py  test_classification.py  test_code_layer.py  test_context.py  test_deep_llm.py  test_deep_normalization.py  test_dynamic_fewshot.py  test_evaluation.py  test_fine_tuning_integration.py  test_intent_models.py  test_intent_orthogonality.py  test_intent_pipeline.py  test_intent_reuse.py  test_lightweight_llm.py  test_multi_recognizer_arbiter.py  test_pipeline.py  test_pre_normalization.py  test_quantification.py  test_rejection_clarification.py  test_server.py  test_slot_filling.py  test_true_multi_intent.py  test_vector_matcher.py  test_vocabulary.py
(+40 files in other folders)
